--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -1,27 +1,28 @@
 h1 Брони
-
--if @reservations.any?
-  table.table
-    tr
-      th Код брони
-      th Фамилия
-      th Имя
-      th Отчество
-      th Номер
-      th Дата заезда
-      th Дата выезда
-    - @reservations.each do |reservation|
-      tr.row-link.reservation class=(:for_accommodation if reservation.can_create_accomodation?)
-        td = link_to reservation.id, [:admin, reservation]
-        td = reservation.client.last_name
-        td = reservation.client.first_name
-        td = reservation.client.middle_name
-        td = reservation.room.number
-        td = l reservation.arrival
-        td = l reservation.departure
-- else
-  p Список активных броней пуст
-
+.row
+  .span12
+    = link_to 'Новая бронь', new_admin_reservation_path, class: :btn
 br
-
-= link_to 'Новая бронь', new_admin_reservation_path, class: :btn
+.row
+  .span12
+    -if @reservations.any?
+      table.table
+        tr
+          th Код брони
+          th Фамилия
+          th Имя
+          th Отчество
+          th Номер
+          th Дата заезда
+          th Дата выезда
+        - @reservations.each do |reservation|
+          tr.row-link.reservation class=(:for_accommodation if reservation.can_create_accomodation?)
+            td = link_to reservation.id, [:admin, reservation]
+            td = reservation.client.last_name
+            td = reservation.client.first_name
+            td = reservation.client.middle_name
+            td = reservation.room.number
+            td = l reservation.arrival
+            td = l reservation.departure
+    - else
+      p Список активных броней пуст
