--- a/app/views/admin/rooms/_form.html.slim
+++ b/app/views/admin/rooms/_form.html.slim
@@ -1,13 +1,18 @@
-= simple_form_for @rooms_form, url: admin_room_category_rooms_path do |f|
-  = f.error_notification
+.row
+  .span2
+    = link_to 'Назад', parent_path, class: :btn
+br
+.row
+  .span12
+    = simple_form_for @rooms_form, url: admin_room_category_rooms_path do |f|
+      = f.error_notification
 
-  - @rooms_form.errors[:base].each do |error|
-    .alert.alert-error = error
+      - @rooms_form.errors[:base].each do |error|
+        .alert.alert-error = error
 
-  .form-inputs
-    = f.input :number_range_start, label: 'Диапазон номеров', input_html: { class: 'input-mini' }
-    | —
-    = f.input :number_range_end, label: false, input_html: { class: 'input-mini' }, error_html: { class: 'lolo' }
+      .form-inputs
+        = f.input :number_range_start, label: 'Диапазон номеров', input_html: { class: 'input-mini' }
+        | —
+        = f.input :number_range_end, label: false, input_html: { class: 'input-mini' }, error_html: { class: 'lolo' }
 
-  .form-actions
-    = f.button :submit, 'Сохранить'
+      = f.button :submit, 'Сохранить'
