--- a/app/views/admin/rooms/index.html.slim
+++ b/app/views/admin/rooms/index.html.slim
@@ -5,7 +5,7 @@ h1 Список номеров в категории "#{parent}"
     .span6
       = link_to 'Назад', parent_path, class: :btn
     .span6
-      = submit_tag 'Удалить выбранные комнаты', class: :btn, data: { confirm: 'Вы действительно хотите удалить выбранные номера?' }
+      = submit_tag 'Удалить выбранные номера', class: :btn, data: { confirm: 'Вы действительно хотите удалить выбранные номера?' }
   br
   .row
     .span12
