--- a/app/views/admin/home/show.html.slim
+++ b/app/views/admin/home/show.html.slim
@@ -1,5 +1,3 @@
 h3 Добро пожаловать в систему управления гостиничным комплексом!
-
-
-
-
+h4 Вы вошли как "#{current_user.human_role}".
+h4 Ваш email: "#{current_user.email}"
