--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -4,13 +4,11 @@ h1 Пользователи
     = link_to 'Добавить пользователя', new_admin_user_path, class: :btn
 br
 .row
-  .span12
+  .span10
     table.table
-
       - @users.each do |user|
         tr
-          td = user.email
-          td = user.password
-          td = user.password_confirmation
-          td = link_to 'Изменить', edit_admin_user_path(user)
-          td = link_to 'Удалить', [:admin, user], confirm: 'Вы действительно хотите удалить этого пользователя?', method: :delete
+          td.span7 = user.email
+          td.span3
+            = link_to 'Изменить', edit_admin_user_path(user), class: :btn
+            = link_to 'Удалить', [:admin, user], confirm: 'Вы действительно хотите удалить этого пользователя?', method: :delete, class: :btn
