--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -8,8 +8,8 @@ br
       = f.error_notification
 
       .form-inputs
-        = f.input :email
-        = f.input :password
-        = f.input :password_confirmation
+        = f.input :email, required: true
+        = f.input :password, required: true
+        = f.input :password_confirmation, required: true
 
       = f.button :submit, 'Сохранить'
