Update datepicker style

--- a/app/assets/stylesheets/shared/datepicker.css.sass
+++ b/app/assets/stylesheets/shared/datepicker.css.sass
@@ -1,3 +1,8 @@
-.ui-datepicker td.datepicker-no-free-rooms span
-  color: black
-  background: #e4c6d4
+.ui-datepicker
+  td.datepicker-no-free-rooms span
+    color: black
+    background: #e4c6d4
+  td[data-handler="selectDay"] a
+    background: #e7ffc8
+  td a.ui-state-active
+    border-color: black
