--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -10,6 +10,7 @@ h1 Брони
         .row
           .span10
             -if @reservations.any?
+              p Зелёным цветом обозначены брони, готовые к заселению (дата заселения является сегодняшним числом)
               table.table
                 tr
                   th Код брони
@@ -19,7 +20,7 @@ h1 Брони
                   th Дата заезда
                   th Дата выезда
                 - @reservations.each do |reservation|
-                  tr.row-link.reservation class=(:for_accommodation if reservation.can_create_accomodation?)
+                  tr.row-link.reservation class=(:for_accommodation if reservation.ready_for_accomodation?)
                     td = link_to reservation.id, [:admin, reservation]
                     td = reservation.client.last_name
                     td = reservation.client.first_name
@@ -31,7 +32,7 @@ h1 Брони
       .span2
         = search_form_for [:admin, @q] do |f|
           .form-inputs
-            = f.label :id_eq, 'Номер брони'
+            = f.label :id_eq, 'Код брони'
             = f.number_field :id_eq
             = f.label :client_last_name_cont, 'Фамилия'
             = f.text_field :client_last_name_cont
