--- a/app/views/room_categories/_room_category.html.slim
+++ b/app/views/room_categories/_room_category.html.slim
@@ -1,2 +1,5 @@
 h3 = room_category.name
 p = simple_format room_category.description
+p
+  b> Стоимость за сутки:
+  | #{room_category.price} рублей
