--- a/app/views/admin/accommodations/show.html.slim
+++ b/app/views/admin/accommodations/show.html.slim
@@ -18,5 +18,9 @@ br
       strong> Дата выезда:
       = l @accommodation.departure, format: :long
 
+    p
+      strong> Расчётная стоимость проживания:
+      | #{@accommodation.cost} рублей
+
     h3 Данные о клиенте
     = render 'clients/client', client: @accommodation.client
