--- a/app/views/admin/room_categories/_form.html.slim
+++ b/app/views/admin/room_categories/_form.html.slim
@@ -9,6 +9,7 @@ br
 
       .form-inputs
         = f.input :name
+        = f.input :price, as: :string
         = f.input :description
 
       = f.button :submit, 'Сохранить'
