--- a/app/views/admin/passports/_passport.html.slim
+++ b/app/views/admin/passports/_passport.html.slim
@@ -1,6 +1,9 @@
 .passport
   p
-    strong> Номер паспорта:
+    strong> Тип документа:
+    = passport.document_type
+  p
+    strong> Номер документа:
     = passport.number
   p
     strong> Дата выдачи:
