--- a/app/views/clients/_client.html.slim
+++ b/app/views/clients/_client.html.slim
@@ -15,5 +15,5 @@
   h3 Контактная информация
   = render 'contact_informations/contact_information', contact_information: client.contact_information
   - if client.passport
-    h3 Паспортные данные
+    h3 Документ удостоверения личности
     = render client.passport
