--- a/app/views/admin/accommodations/new_from_reservation.html.slim
+++ b/app/views/admin/accommodations/new_from_reservation.html.slim
@@ -4,7 +4,7 @@ h1 Новое заселение
     = link_to 'Назад', collection_path, class: :btn
 br
 .row
-  .span12
+  .span6
     = simple_form_for([:admin, @accommodation]) do |f|
       = f.error_notification
       - @accommodation.base_errors.each do |error|
@@ -19,8 +19,9 @@ br
           = cf.input :middle_name
           = cf.input :birthday, as: :string, input_html: { class: 'datepicker' }, required: true
           fieldset
-            legend Паспортные данные
+            legend Документ удостоверения личности
             = cf.simple_fields_for (:passport) do |pf|
+              = pf.input :document_type, collection: Passport::DOCUMENT_TYPES
               = pf.input :number
               = pf.input :date_of_issue, as: :string, input_html: { class: 'datepicker' }
               = pf.input :issuing_authority
