Small fix in view

--- a/app/views/admin/reservations/index.html.slim
+++ b/app/views/admin/reservations/index.html.slim
@@ -10,7 +10,7 @@ h1 Брони
         .row
           .span10
             -if @reservations.any?
-              p Зелёным цветом обозначены брони, готовые к заселению (дата заселения является сегодняшним числом)
+              p Зелёным цветом обозначены брони клиентов, прибывающих сегодня
               table.table
                 tr
                   th Код брони
