add images of rooms

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     = favicon_link_tag 'hotel-icon.png'
     = csrf_meta_tags
   body class=([controller_name, action_name])
+    / .div style="background-image: url( background.jpg )"
     .navbar.navbar-fixed-top
       .navbar-inner
         .container-fluid
